﻿- Fixed Arbor Pylon delegate capture issue