@@ -1,0 +1,20 @@
+using Arbour.Content.Tiles.Multitiles;
+using Terraria.ID;
+using Terraria.ModLoader;
+
+namespace Arbour.Content.Items.Placeable;
+
+public class FloatingFallBoxItem : ModItem
+{
+	public override void SetStaticDefaults()
+	{
+		Item.ResearchUnlockCount = 1;
+		MusicLoader.AddMusicBox(Mod, MusicLoader.GetMusicSlot(Mod, "Assets/Music/DayOld"), ModContent.ItemType<FloatingFallBoxItem>(), ModContent.TileType<FloatingFallBox>());
+	}
+
+	public override void SetDefaults()
+	{
+		Item.DefaultToPlaceableTile(ModContent.TileType<FloatingFallBox>());
+		Item.rare = ItemRarityID.LightRed;
+	}
+}
