@@ -1,0 +1,35 @@
+﻿using Microsoft.Xna.Framework;
+using Terraria;
+using Terraria.DataStructures;
+using Terraria.Localization;
+using Terraria.ModLoader;
+using Terraria.ObjectData;
+
+namespace Arbour.Content.Tiles.Multitiles;
+
+public abstract class BaseMusicBox<T> : ModTile where T : ModItem
+{
+    public override void SetStaticDefaults()
+    {
+        Main.tileFrameImportant[Type] = true;
+        Main.tileObsidianKill[Type] = true;
+
+        TileObjectData.newTile.CopyFrom(TileObjectData.Style2x2);
+        TileObjectData.newTile.Origin = new Point16(0, 1);
+        TileObjectData.newTile.LavaDeath = false;
+        TileObjectData.newTile.DrawYOffset = 2;
+        TileObjectData.addTile(Type);
+
+        LocalizedText name = CreateMapEntryName();
+        AddMapEntry(new Color(200, 200, 200), name);
+        RegisterItemDrop(ModContent.ItemType<T>());
+    }
+
+    public override void MouseOver(int i, int j)
+    {
+        Player player = Main.LocalPlayer;
+        player.noThrow = 2;
+        player.cursorItemIconEnabled = true;
+        player.cursorItemIconID = ModContent.ItemType<T>();
+    }
+}
