@@ -1,0 +1,11 @@
+﻿using Arbour.Content.Items.Placeable;
+
+namespace Arbour.Content.Tiles.Multitiles;
+
+public class StarlitWindsBox : BaseMusicBox<StarlitWindsBoxItem>
+{
+}
+
+public class FloatingFallBox : BaseMusicBox<FloatingFallBoxItem>
+{
+}
