@@ -1,6 +1,6 @@
 displayName = Arbour
 author = GabeHasWon, Heltonyan
-version = 1.2.2.2
+version = 1.2.2.3
 hideCode = false
 hideResources = false
 includeSource = true
